# satgs

./: .gitignore  README.md  mkdocs.yml  noxfile.py  pyproject.toml
.github/workflows/: publish.yml
docs/: crossings.md  example.md  index.md  interfaces.md
src/: arguments.py  custom_logging.py  main.py  paths.py  radio_controller.py  radios.py  rotor_controller.py  rotors.py  settings.py  test.py  tle.py  tracking.py  transponders.py  util.py
src/resources/: default_settings.json
src/resources/radios_default/: dummy_rx.json
src/resources/rotors_default/: dummy.json  pe1ckk.json
